--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,26 +1,99 @@
-.btn{
+.btn {
   padding: 0.4rem;
   margin-top: 100px;
   z-index: 1;
 }
-.typing-input{
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right:0 ;
-  left:0 ;
-  background-color: none;
-  background: none;
-  outline: none;
-  border: none;
-}
-label{
-  display: inline;
-  font-size: 1.4rem;
-  color:rgb(163, 163, 163);
-  white-space: pre;
 
+.typing-input {
+  position: fixed;
+  max-width: 600px;
+  min-width: 600px;
+  z-index: -1;
+
+  input {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1.4rem;
+    line-height: 140%;
+    width: 100%;
+    max-width: 100%;
+    min-height: 50px;
+    height: auto;
+    background-color: none;
+    background: none;
+    outline: none;
+    border: none;
+    color: none;
+    caret-color: orange;
+    display: block;
+    //border: 1px solid white;
+    margin: -3.5px 0 0 -3px;
+    opacity: 0;
+  }
 }
-.placeholder-div{
-  display: inline-flex;
+
+.placeholder-div {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
+  max-height: 200px;
+  min-height: 200px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding: 5px 0px;
+
+  div {
+    max-height: 2.4rem;
+
+    label {
+      display: inline;
+      font-size: 1.4rem;
+      color: rgb(255, 255, 255);
+      white-space: pre;
+    }
+  }
+}
+
+.correct {
+  font-family: monospace;
+  color: rgb(43, 206, 43) !important;
+}
+
+.incorrect {
+  font-family: monospace;
+  color: red !important;
+}
+
+.letter {
+  display: inline-block;
+  font-family: monospace;
+  color: rgb(160 193 220) !important;
+}
+
+.caret {
+  font-size: 1.5rem;
+  animation-name: caretFlashSmooth;
+  opacity: 1;
+  display: block;
+  top: 3.6px;
+  left: 6px;
+  border-radius: var(--roundness);
+  height: 1.2em;
+  width: 0.1em;
+  position: absolute;
+  transform-origin: top left;
+  animation: caretFlashSmooth 1s infinite;
+  background: #e2b714;
+}
+
+@keyframes caretFlashSmooth {
+
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
 }
